--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@ page_sections:
   block: home-hero
 - template: Home Work Loop
   block: home-work-loop
-- template: about-section
+- template: About Section
+  id: about-section
   block: grid-builder
-  section_classes: py-8 buffer
+  fullwidth: 'false'
+  background_color: white
+  section_classes: py-8
   columns:
-  - column_width: 6
+  - column_width: 7
     column_classes: null
-    column_animate: 'true'
-    content: <h4><span class="text-muted">Takenotes Design Studio is the design studio (desk in my living room) of me,</span> Ryan Underwood. <span class="text-muted">I am a non-award winning (It's all politics and I never submit anyways. I'm not bitter.)</span> designer, leader,<span class="text-muted"> and somewhat of a</span> front-end developer.</h4><p>Currently, I am the Design Systems Lead for Brand at Alight Solutions. I also do front-end development, marketing design, email design and development.</p>
+    column_animate: 'false'
+    content: <h3><span class="text-muted">Takenotes Design Studio is the design studio (desk in my living room) of me,</span> Ryan Underwood. <span class="text-muted">I am a non-award winning (It's all politics and I never submit anyways. I'm not bitter.)</span> designer, leader,<span class="text-muted"> and somewhat of a</span> front-end developer.</h3><p>Currently, I am the Design Systems Lead for Brand at Alight Solutions. I also do front-end development, marketing design, email design and development.</p><p class="mt-6"><a href="/about/" class="button">More about me</a></p>
 ---
