--- a/index.html
+++ b/index.html
@@ -7,4 +7,14 @@ page_sections:
   subheadline: The freelance studio and portfolio of me, <em>Ryan Underwood.</em>
 - template: Projects
   block: home-work-loop
+- template: Short Bio
+  block: grid-builder
+  background_color: light
+  classes: py-6
+  columns:
+  - column_width: 6
+    column_clases: null
+    content: <h3>Takenotes Design Studio is the design studio (desk in my living room) of me, Ryan Underwood. I am a non-award winning (It's all politics and I never submit anyways. I'm not bitter.) designer, leader, and somewhat of a front-end developer.</h3><p>Currently, I am the Design Systems Lead for Brand at Alight Solutions. I also do front-end development, marketing design, email design and development.</p>
+- template: Back of House Loop
+  block: home-boh
 ---
