--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: blocks
+theme: dark
 page_sections:
 - template: Homepage Hero
   block: home-hero
@@ -9,12 +10,14 @@ page_sections:
   block: home-work-loop
 - template: Short Bio
   block: grid-builder
-  background_color: light
-  classes: py-6
+  classes: py-8
   columns:
-  - column_width: 6
-    column_clases: null
-    content: <h3>Takenotes Design Studio is the design studio (desk in my living room) of me, Ryan Underwood. I am a non-award winning (It's all politics and I never submit anyways. I'm not bitter.) designer, leader, and somewhat of a front-end developer.</h3><p>Currently, I am the Design Systems Lead for Brand at Alight Solutions. I also do front-end development, marketing design, email design and development.</p>
+  - column_width: 10
+    column_clases: mx-auto text-center
+    content: <p class="h1 display-4">Takenotes Design Studio is the design studio (desk in my living room) of me, Ryan Underwood. I am a non-award winning (It's all politics and I never submit anyways. I'm not bitter.) designer, leader, and somewhat of a front-end developer.</p>
+- template: Marquee
+  block: marquee-text
+  content: Currently, I am the Design Systems Lead for Brand at Alight Solutions. I also do front-end development, marketing design, email design and development.
 - template: Back of House Loop
   block: home-boh
 ---
