--- a/_boh/harissa-chicken.html
+++ b/_boh/harissa-chicken.html
@@ -1,3 +1,38 @@
 ---
-title: Harissa Chicken
+title: Harissa Chicken with Gnocchi
+description: This Harissa Peach Chicken Gnocchi dish started as a fun project for the day; reorganizing the pantry and cleaning out the fridge. It turned into my own at-home version of Chopped. With a few specialty ingredients and a dash of creativity, a new recipe is born!
+author: Sammy Moniz
+prep: 20 minutes
+cook: 20 minutes
+link: https://feedingthefrasers.com/harissa-peach-chicken-gnocchi/
+categories:
+- Pasta
+- Chicken
+- The spice is right
+- Gnocchi Gnocchi
+- Who's there?
+ingredients: 
+- 1 tablespoon olive oil
+- 4-6 boneless chicken thighs
+- 1 teaspoon salt
+- 1 teaspoon pepper
+- 3 cups mini heirloom tomatoes
+- 1/4 cup mina harissa
+- 3 tablespoons red wine vinegar
+- 1 cup kale, chopped
+- 2 peaches, quartered
+- 6 ounces prosciutto, torn
+- 1 package gnocchi
+- 1 tablespoon salted butter
+- Fresh basil, for serving
+- Feta, for serving
+directions:
+- Preheat the oven to 400°F/204°C.
+- Heat the olive oil in a cast iron skillet over medium-high heat.
+- Season the chicken with salt and pepper. When the oil shimmers, sear the chicken on one side for 5-7 minutes. Remove the chicken from the cast iron and set aside.
+- To the hot skillet add the tomatoes. Cook down for 3-5 minutes until the tomatoes begin to burst. Add the harissa and red wine vinegar. Reduce the heat to medium and continue to cook for an additional 5 minutes. Lastly, add the kale and cook for 3 minutes.
+- To the tomatoes, add the quartered peaches, chicken and prosciutto. Place the cast iron into the oven for 10-15 minutes or until the internal temperature of the chicken reaches 165°F.
+- While the chicken finishes cooking in the oven, prepare the gnocchi to package instructions in a pot of boiling water.
+- Heat a separate skillet over medium heat with the tablespoon of salted butter. When the butter is browned add the cooked gnocchi, stir to coat the gnocchi in the butter and lightly brown each piece.
+- Serve the chicken thighs with a scoop of harissa tomatoes and peaches, crispy prosciutto, fresh basil and a sprinkle of feta.
 ---
