New Theme Updates
-- New Theme
-- New Work
-- More Recipes
-- Cool Cool Cool

--- a/_work/adapt-mortgage.html
+++ b/_work/adapt-mortgage.html
@@ -1,5 +1,5 @@
 ---
-date: 2022-03-20
+date: 2021-03-20
 title: Adapt Mortgage
 featured_image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/adapt-mortgage/adapt_PageHeader.jpg
 loop_image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/adapt-mortgage/adapt_PageHeader.jpg
@@ -12,4 +12,38 @@ category:
     - Web Design
     - Art Direction
     - Naming
+page_sections: 
+- template: cs-fullwidth-image
+  block: cs-fullwidth-image
+  images: 
+  - image:  https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/adapt-mortgage/adapt-wordmark-blue-4x-2048x632.png
+    alt: Adapt Mortgage Logo
+  - image:  https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/adapt-mortgage/adapt-colors-4x-2048x632.png
+    alt: Colors
+  - image:  https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/adapt-mortgage/adapt-fonts_1@4x-2048x632.png
+    alt: Type
+  - image:  https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/adapt-mortgage/adapt-fonts-4x-2048x632.png
+    alt: Type
+- template: cs-2-col-image
+  block: cs-2-col-image
+  images:
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/adapt-mortgage/adapt-logo-navy-4x.png
+    alt: Logo
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/adapt-mortgage/adapt-logo-blue@4x.png
+    alt: Logo
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/adapt-mortgage/adapt_social_1-4x.png
+    alt: Social
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/adapt-mortgage/adapt_social_2-4x.png
+    alt: Social
+- template: cs-fullwidth-image
+  block: cs-fullwidth-image
+  images:
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/adapt-mortgage/adapt-social-mock-1.jpg
+    alt: Social Mock Up
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/adapt-mortgage/adapt-social-mock-2.jpg
+    alt: Social Mock Up
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/adapt-mortgage/adapt-mortgage_web-1-1.jpg
+    alt: Website
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/adapt-mortgage/adapt-mock-web-1.jpg
+    alt: Website Mock Up
 ---
