--- a/_work/club-soda.html
+++ b/_work/club-soda.html
@@ -12,4 +12,27 @@ category:
     - Packaging
     - Art Direction
     - Experiential 
+page_sections:
+- template: cs-2-col-image
+  block: cs-2-col-image
+  images:
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/club-soda/csd_logodarkbackground.png
+    alt: Logo
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/club-soda/csd_logogoldbackground.png
+    alt: Logo
+- template: cs-fullwidth-image
+  block: cs-fullwidth-image
+  images:
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/club-soda/csd_fullmark.png
+    alt: Full Logo
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/club-soda/csd_bottlecaps.jpg
+    alt: Bottlecaps
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/club-soda/csd_beer-coaster-mockup.jpg
+    alt: Coasters
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/club-soda/csd_windows_2.jpg
+    alt: Windows 2
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/club-soda/csd_windows_3.jpg
+    alt: Windows 3
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/club-soda/csd_cup_mockups.jpg
+    alt: Cups
 ---
