--- a/_work/credevolv.html
+++ b/_work/credevolv.html
@@ -1,5 +1,5 @@
 ---
-date: 2023-03-20
+date: 2022-01-20
 title: CredEvolv
 featured_image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/credevolv/CE_ProjectFeature.png
 loop_image: /assets/media/images/credevolv/cred-evolv-loop.jpg
@@ -11,4 +11,27 @@ category:
     - Product
     - Art Direction
     - Design System
+page_sections: 
+- template: cs-fullwidth-image
+  block: cs-fullwidth-image
+  images: 
+  - image:  https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/credevolv/ce_BrandGuides.png
+    alt: Brand Guides
+  - image:  https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/credevolv/ce_360_Screens_1.png
+    alt: Mobile Screen
+  - image:  https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/credevolv/ce_360_Screens_2.png
+    alt: Mobile Screen
+  - image:  https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/credevolv/ce_360_FigmaSectionsMobile.png
+    alt: A lot of fucking screens here
+- template: cs-2-col-image
+  block: cs-2-col-image
+  images:
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/credevolv/cd_Desktop.png
+    alt: Desktop
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/credevolv/cd_DesktopElements.png
+    alt: Desktop Elements
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/credevolv/ce_inputs.png
+    alt: inputs
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/credevolv/ce_dropdowns.png
+    alt: Dropdowns
 ---
