--- a/_work/marseilles-bank.html
+++ b/_work/marseilles-bank.html
@@ -11,4 +11,33 @@ category:
     - Branding
     - Front End Development 
     - Design System 
+page_sections:
+- template: cs-2-col-image
+  block: cs-2-col-image
+  images:
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/marseilles-bank/msb_001_Logo.png
+    alt: Logo
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/marseilles-bank/msb_001_Mark.png
+    alt: Logo
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/marseilles-bank/MB_typeQuarto-copy@3x.png
+    alt: Type
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/marseilles-bank/MB_typeQuarto@3x.png
+    alt: Type
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/marseilles-bank/MB_digitalAd_2@3x-2048x734.png
+    alt: Digital Ad
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/marseilles-bank/MB_digitalAd@3x-2048x734.png
+    alt: Digital Ad
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/marseilles-bank/msb_001_Light.png
+    alt: Icons
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/marseilles-bank/msb_001_Dark.png
+    alt: Icons
+- template: cs-fullwidth-image
+  block: cs-fullwidth-image
+  images:
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/marseilles-bank/msb_001_Navigations.png
+    alt: Navigations
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/marseilles-bank/msb_001_Typography.png
+    alt: Typography
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/marseilles-bank/msb_001_web.png
+    alt: Typography
 ---
