--- a/_work/mrktpay.html
+++ b/_work/mrktpay.html
@@ -1,7 +1,7 @@
 ---
-date: 2023-03-20
+date: 2024-01-20
 title: Mrktpay
-loop_image: https://images.unsplash.com/photo-1449844908441-8829872d2607?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+loop_image: https://images.unsplash.com/photo-1484154218962-a197022b5858?q=80&w=3548&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
 featured_image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/mrktpay/MRKTPAY_ProjectFeature.png
 description: A vintage take on a modern solution. The only thing it’s missing is Miss Minutes.
 problem: Mrktpay is looking to streamline a process that's been left in the sands of time. Paying for cobranded materials in the real estate world is convoluted, outdated, and inefficient. 
@@ -10,4 +10,51 @@ category:
     - Branding Updates
     - Art Direction
     - Design System
+page_sections: 
+- template: cs-fullwidth-image
+  block: cs-fullwidth-image
+  images: 
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/mrktpay/1_logo__sketches.png
+    alt: Sketches
+  - image:  https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/mrktpay/2_Logo__Options.png
+    alt: Lockups
+  - image:  https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/mrktpay/3_Brand_Colors.jpg
+    alt: Coors
+  - image:  https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/mrktpay/8_Typography__System.png
+    alt: Typefaces
+- template: cs-2-col-image
+  block: cs-2-col-image
+  images:
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/mrktpay/4a_Credit-Card-PSD-Mockup.jpg
+    alt: Credit Card
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/mrktpay/4b_CreditCard__MortgageOfficer.jpg
+    alt: Credit card
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/mrktpay/5a_.png
+    alt: credit card
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/mrktpay/5b_CreditCard__Layout_REB.png
+    alt: credit card
+- template: cs-fullwidth-image
+  block: cs-fullwidth-image
+  images:
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/mrktpay/6_Social__mockups.png
+    alt: Social Graphics
+- template: cs-2-col-image
+  block: cs-2-col-image
+  images:
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/mrktpay/7a_Social_Graphic--1.png
+    alt: Social Graphic
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/mrktpay/7b_Social_Graphic--2.png
+    alt: Social Graphic
+- template: cs-fullwidth-image
+  block: cs-fullwidth-image
+  images:
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/mrktpay/9_Envelope.jpg
+    alt: Envelope
+- template: cs-2-col-image
+  block: cs-2-col-image
+  images:
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/mrktpay/10a_Pin.jpg
+    alt: Pin
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/mrktpay/10b_handbook.jpg
+    alt: Handbook
 ---
