--- a/_work/princeton-mortgage.html
+++ b/_work/princeton-mortgage.html
@@ -11,4 +11,42 @@ category:
     - Art Direction
     - Design
     - Front-End Development
+page_sections:
+- template: cs-fullwidth-image
+  block: cs-fullwidth-image
+  images:
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/princeton-mortgage/Typography.png
+    alt: Typography
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/princeton-mortgage/Year_in_Review_Graphic.png
+    alt: Year End Review
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/princeton-mortgage/InstaMock_Grid.png
+    alt: Year End Review
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/princeton-mortgage/Big-City-Billboard-Mockup.jpg
+    alt: Billboard
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/princeton-mortgage/Big-Vertical-Billboard-Mockup.jpg
+    alt: Billboard
+- template: cs-2-col-image
+  block: cs-2-col-image
+  images:
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/princeton-mortgage/TeamSite_CulturePageMock.jpg
+    alt: Mock Up
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/princeton-mortgage/home-header-loop.gif
+    alt: Loop
+- template: cs-fullwidth-image
+  block: cs-fullwidth-image
+  images: 
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/princeton-mortgage/Brand.png
+    alt: Brand
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/princeton-mortgage/Buttons.png
+    alt: Buttons
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/princeton-mortgage/Global_Elements.png
+    alt: Global Elements
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/princeton-mortgage/TeamSite_HomePageMock.jpg
+    alt: Mock Up
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/princeton-mortgage/Infographic_Section.png
+    alt: Infographic Section
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/princeton-mortgage/Home_Page.png
+    alt: Home Page
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/princeton-mortgage/Culture_Page.png
+    alt: Culture
 ---
