--- a/_work/scout.html
+++ b/_work/scout.html
@@ -10,4 +10,45 @@ category:
     - Branding
     - Social Media
     - Art Direction
+page_sections: 
+- template: cs-fullwidth-image
+  block: cs-fullwidth-image
+  images: 
+  - image:  https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/scout-outdoors/Primary.png
+    alt:: Primary Logo
+- template: cs-2-col-image
+  block: cs-2-col-image
+  images:
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/scout-outdoors/Secondary_Light_BG.png
+    alt:: Logo
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/scout-outdoors/Secondary_Dark_BG.png
+    alt:: Logo
+- template: cs-fullwidth-image
+  block: cs-fullwidth-image
+  images:
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/scout-outdoors/In_Use.jpg
+    alt:: Typography
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/scout-outdoors/Swatches.png
+    alt:: Colors
+- template: cs-2-col-image
+  block: cs-2-col-image
+  images: 
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/scout-outdoors/Find_The_Gear.jpg
+    alt:: Insta Story
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/scout-outdoors/Yeti_Tumblers.png
+    alt:: Insta Story
+- template: cs-fullwidth-image
+  block: cs-fullwidth-image
+  images: 
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/scout-outdoors/Facebook_Ad.png
+    alt:: Facebook Ad
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/scout-outdoors/Beanie.jpg
+    alt:: Beanie Mock Up
+- template: cs-2-col-image
+  block: cs-2-col-image
+  images:
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/scout-outdoors/Van_Sticker.jpg
+    alt:: Van Sticker
+  - image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/scout-outdoors/Pins.jpg
+    alt:: Pins
 ---
