--- a/_work/club-soda.html
+++ b/_work/club-soda.html
@@ -1,7 +1,7 @@
 ---
 date: 2022-03-19
 title: Club Soda
-featured_image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/club-soda/csd_windows.jpg
+featured_image: /assets/media/featured-images/ClubSoda-Featured-Image.jpg
 loop_image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/club-soda/csd_windows.jpg
 description: Branding for mocktails and coffee shop with a speakeasy feel.
 problem: Creating a brand system that is high-end, genuine, and feels like a great jazz bar.
