--- a/_work/credevolv.html
+++ b/_work/credevolv.html
@@ -1,7 +1,7 @@
 ---
 date: 2022-01-20
 title: CredEvolv
-featured_image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/credevolv/CE_ProjectFeature.png
+featured_image: /assets/media/featured-images/CredEvolv-Featured-Image.jpg
 loop_image: /assets/media/images/credevolv/cred-evolv-loop.jpg
 description: The world's fastest design project for a minimum viable product. Probably ever.
 problem: CredEvolv was working with an outdated product, branding, and no design system to build new features at an effective rate.
