--- a/_work/marseilles-bank.html
+++ b/_work/marseilles-bank.html
@@ -1,7 +1,7 @@
 ---
 date: 2022-03-18
 title: Marseilles Bank
-featured_image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/marseilles-bank/msb_001_webMock_1.jpg
+featured_image: /assets/media/featured-images/MarseillesBank-Featured-Image.jpg
 loop_image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/marseilles-bank/msb_001_webMock_1.jpg
 description: Updated branding for a local bank looking to become stronger.
 problem: Marseilles Bank doesn't specialize in mortgages, real estate, auto loans, or personal loans. They specialize in support, trust, and loyalty. They found that they were losing customers to banks like Chase, Bank of America, and a slew of online banks.
