--- a/_work/mrktpay.html
+++ b/_work/mrktpay.html
@@ -2,7 +2,7 @@
 date: 2024-01-20
 title: Mrktpay
 loop_image: https://images.unsplash.com/photo-1484154218962-a197022b5858?q=80&w=3548&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-featured_image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/mrktpay/MRKTPAY_ProjectFeature.png
+featured_image: /assets/media/featured-images/Mrktpay-Featured-Image.jpg
 description: A vintage take on a modern solution. The only thing it’s missing is Miss Minutes.
 problem: Mrktpay is looking to streamline a process that's been left in the sands of time. Paying for cobranded materials in the real estate world is convoluted, outdated, and inefficient. 
 solution: The goal was to create a branding system that stands out from other real estate ventures, has personality, and uses a vintage aesthetic to poke fun at a decades old process that doesn't show any signs of modernizing.
