--- a/_work/princeton-mortgage.html
+++ b/_work/princeton-mortgage.html
@@ -1,7 +1,7 @@
 ---
 title: Princeton Mortgage
 date: 2022-04-05
-featured_image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/princeton-mortgage/TeamSite_HomePageMock.jpg
+featured_image: /assets/media/featured-images/PrincetonMortgage-Featured-Image.jpg
 loop_image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/princeton-mortgage/TeamSite_HomePageMock.jpg
 description: Revitalizing a decades old mortgage institution.
 problem: Princeton had an outdated design system, web infrastructure, and weak messaging surrounding their decades old reputation, skill set, and ability to close loans.
