--- a/_work/scout.html
+++ b/_work/scout.html
@@ -1,7 +1,7 @@
 ---
 date: 2022-03-21
 title: Scout Outdoors
-featured_image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/scout-outdoors/Van_Sticker.jpg
+featured_image: /assets/media/featured-images/Scout-Featured-Image.jpg
 loop_image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/scout-outdoors/Van_Sticker.jpg
 description: Rebranding for a local, couple-owned store from rural Illinois.
 problem: I was tasked with exploring options for a small mom & pop outdoors store in rural Illinois selling outdoor gear, camping gear, and items in that category.
