--- a/_pages/about.html
+++ b/_pages/about.html
@@ -3,3 +3,89 @@ layout: default
 theme: dark
 title: About 
 ---
+<div class="container-fluid py-10 d-flex align-items-center" style="min-height: 100vh;">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h1 class="h2">
+                    Takenotes Design Studio is the design studio (desk in my living room) of me, Ryan Underwood. I am a non-award-winning (It's all politics and I never submit anyways. I'm not bitter.) designer, leader, and somewhat of a front-end developer.
+                </h1>
+                <h2 class="h4">
+                    Right now I work at the convergence of operations, branding, marketing, and systems/operations. That is a few ten-dollar words to just say I help companies build their branding, and organize and operationalize it.
+                </h2>
+                <p class="mt-2 small text-uppercase">
+                    <strong>
+                        The real biography:
+                    </strong>
+                </p>
+                <p>
+                    I am a designer with many moons of experience. If I am being honest, I lost count of how many years. Starting with a pirated version of Adobe Photoshop and making materials for various bands I was in during my early 20s, I learned some early on-set soft skills. Some of these skills being client management, and others including learning the hardway about the neccessity of a contract in a freelance working relationship.
+                </p>
+                <p>
+                    Throughout my career, I have been fortunate-enough to work for some great companies to help them to grow through design, strategy, and systematic development.
+                </p>
+                <p>
+                    When not plopped down in front of a computer hitting command + k in Figma, or in VSCODE you can typically find me reading, playing guitar, working out, or complaining that my knees are sore (most likely from working out).
+                </p>
+                <p>
+                    I have not hit the "smoking meat" phase of life. Yet. Though... I do have some Aaron Franklin and Matty Matheson cookbooks.
+                </p>
+                <p>
+                    Thanks, Chef.
+                </p>
+            </div>
+            <div class="col-md-auto ms-auto">
+                <p class="small text-uppercase">
+                    <strong>
+                        Experience:
+                    </strong>
+                </p>
+                <ul class="list-unstyled p-0">
+                    <li class="mb-1">
+                        <h5 class="mb-0">
+                            Alight Solutions
+                        </h5>
+                        <p class="mb-0">
+                            Design System Lead Brand
+                        </p>
+                        <p>
+                            Senior Digital Designer
+                        </p>
+                    </li>
+                    <li class="mb-1">
+                        <h5 class="mb-0">
+                            Princeton Mortgage
+                        </h5>
+                        <p>
+                            Sr. Art Director
+                        </p>
+                    </li>
+                    <li class="mb-1">
+                        <h5 class="mb-0">
+                            CrossCountry Mortgage
+                        </h5>
+                        <p>
+                            Sr. Art Director
+                        </p>
+                    </li>
+                    <li class="mb-1">
+                        <h5 class="mb-0">
+                            Perl Mortgage
+                        </h5>
+                        <p>
+                            Art Director
+                        </p>
+                    </li>
+                    <li class="mb-1">
+                        <h5 class="mb-0">
+                            Frey Design Group
+                        </h5>
+                        <p>
+                            Senior Designer
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
