--- a/_work/adapt-mortgage.html
+++ b/_work/adapt-mortgage.html
@@ -1,7 +1,7 @@
 ---
 date: 2021-03-20
 title: Adapt Mortgage
-featured_image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/adapt-mortgage/adapt_PageHeader.jpg
+featured_image: /assets/media/featured-images/AdaptMortgage-Featured-Image.jpg
 loop_image: https://s3.us-east-2.wasabisys.com/takenotes/portfolio/projects/adapt-mortgage/adapt_PageHeader.jpg
 description: Developing a brand for a small but ambitious mortgage start up.
 problem: Adapt Mortgage wasn't a typical project for me. The idea was to create a subsidiary of a much larger company and have access to its resources. They wanted to position the company as a younger, more tech-savvy light with a simplistic branding style.
