--- a/_boh/cranberry-and-quinoa-pilaf-with-roasted-brussels-sprouts.html
+++ b/_boh/cranberry-and-quinoa-pilaf-with-roasted-brussels-sprouts.html
@@ -16,7 +16,7 @@ ingredients:
 - 2 ¾ cup water
 - pinch of salt
 - 1/2 cup toasted almonds
-- 1/2 cup dried cranberries (if you can’t find any, don’t fucking sweat it
+- 1/2 cup dried cranberries if you can’t find any, don’t fucking sweat it
 - 1/3 cup chopped parsley
 - 1/2 teaspoon of salt
 - 3-4 cloves of garlic
